# pre-commit-gradle

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  README.md  setup.cfg  setup.py
pre_commit_hooks/: gradle_build.py  gradle_check.py  gradle_spotless.py  gradle_task.py  util.py
testing/: util.py
tests/: util_test.py
tests/example/: build.gradle  settings.gradle
