[metadata]
name = pre_commit_gradle
version = 0.1.0
description = Some custom gradle hooks for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jguttman94/pre-commit-gradle
author = Jack Guttman
author_email = jguttman94@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    flake8
    ruamel.yaml>=0.15
    toml
    six
    typing; python_version<"3.5"
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*

[options.entry_points]
console_scripts =
    gradle-check = pre_commit_hooks.gradle_check:main
    gradle-build = pre_commit_hooks.gradle_build:main
    gradle-spotless = pre_commit_hooks.gradle_spotless:main
    gradle-task = pre_commit_hooks.gradle_task:main


[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
